# Mouse-Clicker

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
profiles/: Default.json  Test 1.json
src/: main.rs
src/gui/: animations.rs  app.rs  clicker.rs  components.rs  mod.rs  theme.rs
src/gui/views/: area_view.rs  image_view.rs  mod.rs  profile_view.rs  settings_view.rs  stats_view.rs
src/modules/: config.rs  error.rs  image_recognition.rs  input.rs  mod.rs  mouse.rs  profiles.rs  ui.rs
