[package]
name = "mouse"
version = "0.1.0"
edition = "2021"
description = "Mouse clicker application"

[dependencies]
crossterm = "0.27.0"
enigo = "0.1.3"
md5 = "0.7.0"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Console", "Win32_Graphics_Gdi", "Win32_UI_Controls"] }

# GUI dependencies
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = "0.31.1"
image = "0.24.7"

# Image recognition dependencies
base64 = "0.22.1"
chrono = "0.4.31"
